--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "hypernym-studio/prettier-config",
   "homepage": "https://github.com/hypernym-studio/prettier-config",
   "main": "./src/index.js",
+  "types": "./src/index.d.ts",
   "files": [
     "src"
   ],
