--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "prettier": ">=3.0.0"
   },
   "devDependencies": {
-    "@hypernym/bundler": "^0.9.0",
-    "prettier": "^3.2.5"
+    "@hypernym/bundler": "^0.9.3",
+    "@hypernym/tsconfig": "^2.0.0",
+    "prettier": "^3.3.3"
   }
 }
