--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   ],
   "scripts": {
     "build": "hyperbundler",
-    "format": "prettier --config src/index.js --write .",
+    "format": "prettier --config src/index.mjs --write .",
     "prepublishOnly": "pnpm build"
   },
   "peerDependencies": {
@@ -46,9 +46,9 @@
     }
   },
   "devDependencies": {
-    "@hypernym/bundler": "^0.14.3",
+    "@hypernym/bundler": "^0.14.4",
     "@hypernym/tsconfig": "^2.6.1",
-    "prettier": "^3.5.3",
-    "prettier-plugin-svelte": "^3.3.3"
+    "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0"
   }
 }
