--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.mts",
-      "import": "./dist/index.mjs"
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
     },
     "./svelte": {
-      "types": "./dist/svelte/index.d.mts",
-      "import": "./dist/svelte/index.mjs"
+      "types": "./dist/svelte/index.d.ts",
+      "import": "./dist/svelte/index.js"
     }
   },
   "files": [
@@ -33,7 +33,7 @@
   ],
   "scripts": {
     "build": "hyperbundler",
-    "format": "prettier --config src/index.mjs --write .",
+    "format": "prettier --config src/index.js --write .",
     "prepublishOnly": "pnpm build"
   },
   "peerDependencies": {
@@ -47,7 +47,7 @@
   },
   "devDependencies": {
     "@hypernym/bundler": "^0.14.4",
-    "@hypernym/tsconfig": "^2.6.1",
+    "@hypernym/tsconfig": "^2.6.2",
     "prettier": "^3.6.2",
     "prettier-plugin-svelte": "^3.4.0"
   }
